[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-qs2csv"
version = "0.2.1"
dependencies = [
    "django>=3.2",
    'importlib-metadata; python_version<"3.10"',
]
description = "A simple package to convert a Django QuerySet to a CSV file through an HttpResponse object."
authors = [
  { name="Jer-Pha", email="pharesoft@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["csv", "export", "pandas", "httpresponse", "http response", "django"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: File Formats",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
pd = ["pandas>=1.5"]

[project.urls]
Repository = "https://github.com/Jer-Pha/django-qs2csv"
Issues = "https://github.com/Jer-Pha/django-qs2csv/issues"
